Mall-MicroService/mall-and-skywalking/mall-admin.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mall-admin
  labels:
    app: mall-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mall-admin
  template:
    metadata:
      labels:
        app: mall-admin
    spec:
      containers:
        - name: mall-admin
          # 指定Docker Hub中的镜像地址
          image: ikubernetes/mall-admin:1.0-SNAPSHOT
          ports:
            - containerPort: 8080
          volumeMounts:
          - mountPath: /skywalking
            name: skywalking-agent
      volumes:
        - name: skywalking-agent
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: mall-admin
spec:
  type: ClusterIP
  selector:
    app: mall-admin
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
