Mall-MicroService/mall-and-skywalking/mall-auth.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mall-auth
  labels:
    app: mall-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mall-auth
  template:
    metadata:
      labels:
        app: mall-auth
    spec:
      containers:
        - name: mall-auth
          # 指定Docker Hub中的镜像地址
          image: ikubernetes/mall-auth:1.0-SNAPSHOT
          ports:
            - containerPort: 8401
          volumeMounts:
          - mountPath: /skywalking
            name: skywalking-agent
      volumes:
        - name: skywalking-agent
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: mall-auth
spec:
  type: ClusterIP
  selector:
    app: mall-auth
  ports:
    - name: http
      protocol: TCP
      port: 8401
      targetPort: 8401
