Mall-MicroService/mall-and-skywalking/mall-portal.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mall-portal
  labels:
    app: mall-portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mall-portal
  template:
    metadata:
      labels:
        app: mall-portal
    spec:
      containers:
        - name: mall-portal
          # 指定Docker Hub中的镜像地址
          image: ikubernetes/mall-portal:1.0-SNAPSHOT
          ports:
            - containerPort: 8085
          volumeMounts:
          - mountPath: /skywalking
            name: skywalking-agent
      volumes:
        - name: skywalking-agent
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: mall-portal
spec:
  type: ClusterIP
  selector:
    app: mall-portal
  ports:
    - name: http
      protocol: TCP
      port: 8085
      targetPort: 8085
