Mall-MicroService/mall-and-skywalking/mall-search.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mall-search
  labels:
    app: mall-search
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mall-search
  template:
    metadata:
      labels:
        app: mall-search
    spec:
      containers:
        - name: mall-search
          # 指定Docker Hub中的镜像地址
          image: ikubernetes/mall-search:1.0-SNAPSHOT
          ports:
            - containerPort: 8081
          volumeMounts:
          - mountPath: /skywalking
            name: skywalking-agent
      volumes:
        - name: skywalking-agent
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: mall-search
spec:
  type: ClusterIP
  selector:
    app: mall-search
  ports:
    - name: http
      protocol: TCP
      port: 8081
      targetPort: 8081
