Mall-MicroService/mall-and-skywalking/mall-gateway.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mall-gateway
  labels:
    app: mall-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mall-gateway
  template:
    metadata:
      labels:
        app: mall-gateway
    spec:
      containers:
        - name: mall-gateway
          # 指定Docker Hub中的镜像地址
          image: ikubernetes/mall-gateway:1.0-SNAPSHOT
          ports:
            - containerPort: 8201
          volumeMounts:
          - mountPath: /skywalking
            name: skywalking-agent
      volumes:
        - name: skywalking-agent
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: mall-gateway
spec:
  type: NodePort
  selector:
    app: mall-gateway
  ports:
    - name: http
      protocol: TCP
      port: 8201
      targetPort: 8201
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mall-gateway
  annotations:
    ingress.cilium.io/loadbalancer-mode: 'shared'
    ingress.cilium.io/service-type: 'Loadbalancer'
spec:
  ingressClassName: cilium
  rules:
  - host: mall-gateway.magedu.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mall-gateway
            port:
              number: 8201
