Mall-MicroService/mall-and-skywalking/mall-monitor.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mall-monitor
  labels:
    app: mall-monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mall-monitor
  template:
    metadata:
      labels:
        app: mall-monitor
    spec:
      containers:
        - name: mall-monitor
          # 指定Docker Hub中的镜像地址
          image: ikubernetes/mall-monitor:1.0-SNAPSHOT
          #imagePullPolicy: Always
          ports:
            - containerPort: 8101
          volumeMounts:
          - mountPath: /skywalking
            name: skywalking-agent
      volumes:
        - name: skywalking-agent
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: mall-monitor
spec:
  type: ClusterIP
  selector:
    app: mall-monitor
  ports:
    - name: http
      protocol: TCP
      port: 8101
      targetPort: 8101
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mall-monitor
  annotations:
    ingress.cilium.io/loadbalancer-mode: 'shared'
    ingress.cilium.io/service-type: 'Loadbalancer'
spec:
  ingressClassName: cilium
  rules:
  - host: mall-monitor.magedu.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mall-monitor
            port:
              number: 8101
